# LI1

2022li1g046-main/: 2022li1g046.cabal  README.md
2022li1g046-main/doc/html/: LI12223.html  Main.html  Tarefa1_2022li1g046.html  Tarefa2_2022li1g046.html  Tarefa3_2022li1g046.html  Tarefa4_2022li1g046.html  Tarefa5_2022li1g046.html  Tarefa6_2022li1g046.html  doc-index.html  index.html
2022li1g046-main/src/: LI12223.hs  Main.hs  Tarefa1_2022li1g046.hs  Tarefa2_2022li1g046.hs  Tarefa3_2022li1g046.hs  Tarefa4_2022li1g046.hs  Tarefa5_2022li1g046.hs  Tarefa6_2022li1g046.hs
2022li1g046-main/tests/: LI12223.hs  Spec.hs  Tarefa1_2022li1g046.hs  Tarefa1_2022li1g046_Spec.hs  Tarefa2_2022li1g046_Spec.hs  Tarefa3_2022li1g046_Spec.hs  Tarefa4_2022li1g046_Spec.hs  Tarefa5_2022li1g046_Spec.hs  Tarefa6_2022li1g046_Spec.hs
