cabal-version:      2.4
name:               2022li1g046
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

author:             Miguel Tomás Antunes Pinto <a100815@alunos.uminho.pt>
                    Tomás Araújo Santos <a104005@alunos.uminho.pt>

library
  exposed-modules:
    LI12223
    Tarefa1_2022li1g046
    Tarefa2_2022li1g046
    Tarefa3_2022li1g046
    Tarefa4_2022li1g046
  build-depends:    base ^>=4.16.3.0
  hs-source-dirs:   src
  default-language: Haskell2010

executable 2022li1g046
  main-is:          Main.hs
  other-modules:
    LI12223
    Tarefa1_2022li1g046
    Tarefa2_2022li1g046
    Tarefa3_2022li1g046
    Tarefa4_2022li1g046
  build-depends:    base ^>=4.16.3.0
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite 2022li1g046-tests
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  other-modules:
    LI12223
    Tarefa1_2022li1g046
    Tarefa2_2022li1g046
    Tarefa3_2022li1g046
    Tarefa4_2022li1g046
    Tarefa1_2022li1g046_Spec
    Tarefa2_2022li1g046_Spec
    Tarefa3_2022li1g046_Spec
    Tarefa4_2022li1g046_Spec
  build-depends:        base ^>=4.16.3.0, HUnit
  hs-source-dirs:       tests src
  default-language:     Haskell2010
